--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -8,12 +8,19 @@ on:
   workflow_dispatch:
 
 jobs:
-  
-  zip-files:
+
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: papeloto/action-zip@v1
-        with:
-          files: ./*
-          dest: MumbleLinkAutoInstall.zip
+    - uses: actions/checkout@master
+    - name: Archive Release
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        filename: 'mumbleLinkAutoInstaller.zip'
+        exclusions: '*.git*'
+    - name: Upload Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "mumbleLinkAutoInstaller.zip"
+        token: ${{ secrets.GITHUB_TOKEN }}
