--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -19,3 +19,12 @@ jobs:
         type: 'zip'
         filename: 'mumbleLinkAutoInstaller.zip'
         exclusions: '*.git*'
+    - name: Switch to Release Folder
+      run: |
+        cd release
+        ls -la
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REPO_OWNER: ctrlouis
