👷 Update github workflow

--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -22,23 +22,25 @@ jobs:
         filename: 'mumbleLinkAutoInstaller.zip'
         exclusions: '*.git*'
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: |
-          Changes in this Release
-          - First Change
-          - Second Change
-        draft: false
-        prerelease: false
+    # - name: Create Release
+    #   id: create_release
+    #   uses: actions/create-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+    #   with:
+    #     tag_name: ${{ github.ref }}
+    #     release_name: Release ${{ github.ref }}
+    #     draft: false
+    #     prerelease: false
 
-    - name: Upload Release
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "mumbleLinkAutoInstaller.zip"
-        token: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Upload Release
+    #   uses: ncipollo/release-action@v1
+    #   with:
+    #     artifacts: "mumbleLinkAutoInstaller.zip"
+    #     token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REPO_OWNER: ctrlouis
