--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -1,46 +1,30 @@
-name: Zip Files
-
 on:
   push:
-    branches:
-    - master
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
-  workflow_dispatch:
+name: Create Release
 
 jobs:
 
   build:
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
-
-    - uses: actions/checkout@master
-
-    - name: Archive Release
-      uses: thedoctor0/zip-release@master
-      with:
-        type: 'zip'
-        filename: 'mumbleLinkAutoInstaller.zip'
-        exclusions: '*.git*'
-
-    # - name: Create Release
-    #   id: create_release
-    #   uses: actions/create-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-    #   with:
-    #     tag_name: ${{ github.ref }}
-    #     release_name: Release ${{ github.ref }}
-    #     draft: false
-    #     prerelease: false
-
-    # - name: Upload Release
-    #   uses: ncipollo/release-action@v1
-    #   with:
-    #     artifacts: "mumbleLinkAutoInstaller.zip"
-    #     token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        REPO_OWNER: ctrlouis
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
